sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:3: error: not found: value i
  i=1
  ^AlgGnomeSort:4: error: not found: value i
  while (i!=(getNombreValeurs()-1)){
         ^AlgGnomeSort:5: error: not found: value i
    if (i==0){i+=1}
        ^AlgGnomeSort:5: error: not found: value i
    if (i==0){i+=1}
              ^AlgGnomeSort:6: error: not found: value i
    else if (plusPetit(i,i+1)==false){
                       ^AlgGnomeSort:6: error: not found: value i
    else if (plusPetit(i,i+1)==false){
                         ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:8: error: not found: value i
      i-=1
      ^AlgGnomeSort:10: error: not found: value i
    else {i+=1}
          ^